# aws-creds

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: cmd_default.rs  cmd_get.rs  cmd_list.rs  cmd_new.rs  cmd_remove.rs  cmd_rename.rs  cmd_show.rs  main.rs  types.rs  utils.rs
test_assets/: creds.json
