[package]
name = "aws-creds"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
aws-config = { version = "1.5.18", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.62.0"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive", "cargo"] }
dirs = "6.0.0"
inquire = "0.7.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
